use data up to the 15th of August

--- a/docs/paper/paper.Rmd
+++ b/docs/paper/paper.Rmd
@@ -134,7 +134,7 @@ scores <- fread(here("data", "scores.csv")) |>
   rename_models()
 ```
   
-  We extracted forecasts and data on notified weekly COVID-19 cases from the ECDC forecasting hub from 15th of January 2022 to the 19th of July 2022 for the ensemble model (referenced as `EuroCOVIDhub-ensemble` by the hub team) and the surrogate model (submitted as `epiforecasts-weeklygrowth`).
+  We extracted forecasts and data on notified weekly COVID-19 cases from the ECDC forecasting hub from 15th of January 2022 to the 15th of August 2022 for the ensemble model (referenced as `EuroCOVIDhub-ensemble` by the hub team) and the surrogate model (submitted as `epiforecasts-weeklygrowth`).
   We included all locations covered by the ECDC forecasting hub which were 32 European countries, including all countries of the European Union and European Free Trade Area, and the United Kingdom.
   Data on notified weekly cases was originally sourced from the Johns Hopkins University curated data repository (JHU, [@REF]).
   We used the latest available observed data. As observations are subject to revisions this means that the data used to produce forecasts for a given date may not reflect the data used for evaluation.
@@ -343,7 +343,7 @@ The code for the forecating model defined above along with the infrastructure re
 
 In our study period, incidence rates across ECDC nations and in the UK were primary driven by the spread of noval subvariants of concern related to the Omicron variant. Many nations, such as the UK saw large BA.1 waves in early January to late January that then resulted in declining incidence rates through Febuary. From late Febuary, througth to the end of May, most nations then saw another wave, typically with lower reported incidence rates, driven by BA.2. This wave was typically characterised by a lower peak than the BA.1 wave but a longer tail. The end of our study period was characterised by the gradual take-over of the BA.4/BA.5 subvariants that again had a lower peak and lower absolute growth rates. Unlike earlier periods in the pandemic, our study period did not see the use of new non-pharmaceutical interventions (NPIs) in response to increasing COVID-19 incidence in most locations. In addition, in general ascertainment rates likely reduced over time in most locations due to reductions in routine testing, and reductions in test availability. Whilst both the reduced use of NPIs and testing generally occured across nations our study period also marked an increase in the heterogenity of the response to COVID-19 pandemic with nations changing policy at different times and to different degrees. This is in contrast to the early COVID-19 pandemic response for which most nations took similar actions at similar times.
 
-We extracted forecasts starting from the 15th of January until the 19th of July 2022 for all countries covered by the ECDC forecasting hub (all ECDC nations and the UK making `r locations` unique locations). In total `r nrow(metadata)` forecasts were made across all locations, `r forecast_dates` forecast dates from `r models` independent forecast models (including the ECDC baseline model). Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as `epiforecasts-EpiNow2` by the hub), and our surrogate model. Of the remaining models submitted `r length(local_models)` were submitted in only one location. These models were gernerally submitted to a subset of locations with particular clustering in Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the ECDC forecasting hub project). Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n]` models that submitted nowhere else. `r nrow(partial_models)` models submitted for between 3 and 30 locations and all these models varied the number of locations they submitted forecasts for over time, potentially indicating manual curation or models targeted at specific conditions.
+We extracted forecasts starting from the 15th of January until the 1st of August 2022 for all countries covered by the ECDC forecasting hub (all ECDC nations and the UK making `r locations` unique locations). In total `r nrow(metadata)` forecasts were made across all locations, `r forecast_dates` forecast dates from `r models` independent forecast models (including the ECDC baseline model). Of these models, `r length(global_models)` forecasted in at least 30 locations including our original submission  (referred to as `epiforecasts-EpiNow2` by the hub), and our surrogate model. Of the remaining models submitted `r length(local_models)` were submitted in only one location. These models were gernerally submitted to a subset of locations with particular clustering in Germany and Poland (likely due to the folding of the German/Poland forecasting hub into the ECDC forecasting hub project). Italy was also an outlier with `r single_locs_models_per_loc[location == "IT", n]` models that submitted nowhere else. `r nrow(partial_models)` models submitted for between 3 and 30 locations and all these models varied the number of locations they submitted forecasts for over time, potentially indicating manual curation or models targeted at specific conditions.
 
 Across all forecast dates and locations the minimum number of independent forecasts was `r models_per_loc_date[, min(n)]` with the maxmimum being `r models_per_loc_date[, max(n)]`. The median number of independent forecasts per location and forecast date was `r models_per_loc_date[, median(n)]`. All locations recieved forecasts from at least `r models_per_location[, min(n)]` models with the median number of forecast models per location being `r models_per_location[, median(n)]`. Coverage of forecast dates varied across submitted models with `r forecast_dates_by_models[n_per == 1, .N]` models submitting for all dates, `r forecast_dates_by_models[n_per >= 0.9, .N]` models submitting for at least 90% of dates, and `r forecast_dates_by_models[n_per < 0.50, .N]` models submitting for fewer than 50% of forecast dates. In general, there was no clear difference in forecast date coverage between models that submitted for all locations vs a small subset but models with partial coverage of locations all also had partial coverage of forecast dates.
 
@@ -468,16 +468,9 @@ plot_rwis_by_month <- relative_wis |>
 
 ## Summary {-}
 
-In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK. We first derived a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experiance submitting forecasts to various forecast Hubs and our observations of the performance of other models. We restricted ourselves to a model that could be easily understand, that produced meaningful summary statistics, and that could be run with low compute resources. We further provide a fully reproducibile workflow for running this model using GitHub actions and code to evaluate its performance. 
+In this study, we defined a surrogate model aiming to replicate some of the observed behaviour of the ECDC forecast hub multi-team ensemble for forecasting test positive reported COVID-19 cases in ECDC nations and the UK. We first defined a set of assumptions for how the surrogate model should behaved based on our observations of the ECDC forecast hub ensemble, our experiance submitting forecasts to various forecast Hubs and our observations of the performance of other models. We restricted ourselves to a model that could be easily understood, that produced meaningful summary statistics, and that could be run with low compute resources. We further provide a fully reproducibile workflow for running this model using GitHub actions and code to evaluate its performance. 
 
-Over the 6 months of the study period, we found that our surrogate model performed adequately at reproducing the forecast hub ensemble with average performance that was in general slightly worse though this varied by location and forecast date. Performance was closest for short forecast horizons and degraded relative to the forecast hub ensemble as the horizon increased. We observed that our surrogate model displayed similar levels of robustness to the forecast ensemble with few outlier forecasts unlike our previous forecasting efforts [@refNikosinGermany] and also partially captured the hub ensembles propensity to forecast reductions in incidence after periods of increase. Unlike the forecast hub ensemble our surrogate model was well calibrated at all horizons and credible intervals explored though it was overly uncertain at short horizons. We found that the majority of the difference in performance between our surrogate model and the hub ensemble occured in the tails of the predictive distribution with similar central forecasts.
-
-In this study, we define an initial attempt at a surrogate model to replicate the observed behaviour of current multi-team forecast ensembles whilst maintaining a set of clear assumptionse and summarise its implementation, with a focus on minimal resource use and reproducibility, as a GitHub action. 
-We briefly outline some of the summary statistics it produces and their epidemiological relevance. 
-We then evaluate it's real-time performance in comparison to the ECDC forecast hub ensemble by visualising forecasts, using the weighted interval score [@REF], a commonly used proper scoring rule, and quantifying its empirical coverage.
-We attempt to highlight settings where this model performs well as a surrogate to the ensemble forecast and areas where more work is needed. 
-Finally, we summarise our findings, discuss their implications, and highlight areas for potential study. We aim for this work to highlight some of the potential implicit assumptions of current forecast hub ensembles, provide a sensible, low resource, surrogate model in settings where large-scale colloborative forecasting efforts are not possible, and provide inspiration for forecasters looking to make principled improvements to their models
-
+Over the 6 months of the study period, we found that our surrogate model performed adequately at reproducing the forecast hub ensemble with average performance that was in general slightly worse though this varied by location and forecast date. Performance was closest for short forecast horizons and degraded relative to the forecast hub ensemble as the horizon increased. We observed that our surrogate model displayed similar levels of robustness to the forecast ensemble with few outlier forecasts unlike our previous forecasting efforts [@refNikosinGermany] and also partially captured the hub ensembles propensity to forecast reductions in incidence after periods of increase. Unlike the forecast hub ensemble our surrogate model was well calibrated for most horizons and credible intervals explored though it was overly uncertain at short horizons. We found that the majority of the difference in performance between our surrogate model and the hub ensemble occured in the tails of the predictive distribution with similar central forecasts.
 
 ## Stengths and weaknesses {-}
 
